# StatementParser

./: README.md  makefile  pyproject.toml
bank_statement_parser/: Bank.py  Transaction.py  __init__.py
bank_statement_parser/banks/: HdfcCredit.py  HsbcCredit.py  HsbcDebit.py  IciciCredit.py  IciciDebit.py  KotakDebit.py  Wallet.py
statement_parser/: Bank.py
statement_parser/banks/: KotakDebit.py
tests/: HDFCCreditTest.py  HSBCCreditTest.py  HSBCDebit.py  HSBCDebitTest.py  ICICICreditTest.py  ICICIDebitTest.py  KotakDebitTest.py  WalletTest.py
tests/resources/: HDFC-Credit.csv  HSBC-Credit.csv  HSBC-Debit.xls  ICICI-Credit.csv  ICICI-Debit.xls  Kotak-Debit.csv  wallet.xls
